added names index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
 Authors in chronological order of contribution:
 Tim Riedel
-Author 2
+Akansha Bojjam
+Aarush Kaboo
+Jean Velasquez
+Nayon Lee
+Annie Nguyen
+Lujein Abdelwahed
  
 Further Information:
 http://cns.utexas.edu/fri
