added a description to the project goal index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-blah, blah, blah,
+The goal of the code is to diangose skin cancer based upon the analysis of an image to find the color red on the skin. It will also ask input questions that will be responded to by the individual, giving two forms of input for the user to utilize in order to diagnose for skin cancer.
  
 Known Issues:
 blah, blah, blah, blah
