testing background color change index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Brief Description of Goal of Code:
 The goal of the code is to diangose skin cancer based upon the analysis of an image to find the color red on the skin. It will also ask input questions that will be responded to by the individual, giving two forms of input for the user to utilize in order to diagnose for skin cancer.
  
 Known Issues:
-blah, blah, blah, blah
+None
 
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
@@ -72,7 +72,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     left: -100vw;
     overflow-y: auto;
     z-index: 0;
-    background-color: hsl(0,0%,100%);
+    background-color: hsl(27,3%,84%);
 }
 
   .page:target {
