--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 
 <script>
-        var allergy_count = 0;
+  var docMod = document.lastModified; // gets last modified date and time of the index.html file
+  alert("This file last modified " + docMod); // generates alert box with time stamp.
+  console.log("This file last modified  " + docMod); // displays last modified date and time in the javascipt browser console 
+        /* var allergy_count = 0;
         var cold_count = 0;
 
 
@@ -53,7 +56,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
         function coldAdd(){
             cold_count = cold_count + 1;
-        }
+        } */
 
   </script>
 
@@ -72,7 +75,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     left: -100vw;
     overflow-y: auto;
     z-index: 0;
-    background-color: hsl(127,53%,200%);
+    background-color: hsl(0,0%,100%);
 }
 
   .page:target {
