Revert "Added page 3 and page content"
This reverts commit d5ae94419331acb7bee28124848b2c1fba968346.

--- a/index.html
+++ b/index.html
@@ -41,33 +41,22 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 
 <script>
-<<<<<<< HEAD
-        var cancer_count = 0;
-        var spot_count = 0;
-=======
   var docMod = document.lastModified; // gets last modified date and time of the index.html file
   alert("This file last modified " + docMod); // generates alert box with time stamp.
   console.log("This file last modified  " + docMod); // displays last modified date and time in the javascipt browser console 
         /* var allergy_count = 0;
         var cold_count = 0;
->>>>>>> 8cf53b7252c1f32bebd0ce78abd514d10463fc12
 
 
-        function cancerAdd(){
-            cancer_count = cancer_count + 1;
-		alert(cancer_count);
+        function allergyAdd(){
+            allergy_count = allergy_count + 1;
+		alert(allergy_count);
 
         }
 
-<<<<<<< HEAD
-        function spotAdd(){
-            spot_count = cold_count + 1;
-        }
-=======
         function coldAdd(){
             cold_count = cold_count + 1;
         } */
->>>>>>> 8cf53b7252c1f32bebd0ce78abd514d10463fc12
 
   </script>
 
@@ -114,23 +103,14 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 
-<<<<<<< HEAD
-<div class="page" id="one"> <!-- contains page content--> 
-	<div id="header" class="w3-container w3-flat-carrot"> <!--header content-->
-		<h1>Question 1</h1> <!--what is in the header-->
-=======
 <div class="page" id="one">
 	<div id="header" class="w3-container w3-flat-amethyst">
 		<h1>Question 1</h1>
->>>>>>> 8cf53b7252c1f32bebd0ce78abd514d10463fc12
 	</div>
 	
     	<div id="content" class="w3-container">
-        <p>Is the spot on your asymmetrical?</p> <!--Question that is printed-->
-		<a href="#two" onclick="cancerAdd();" class="w3-btn w3-black"> Yes</a> <!--The buttons that will keep track of the yes's and no's to calculate the probability of whether the person has skin cancer or if it is just a skin spot--> 
-         	<a href="#two" onclick="spotAdd();" class="w3-btn w3-black">No</a>
-   
-    	</div> <!--content --> 
+        <p>Put Question 1 content here.</p>    
+    	</div>
 </div>
 
 <div class="page" id="two"> <!--creates new page for Question 2-->
