added words to page index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 -->
 	
    <head> 
-      <title>Hello World</title>  
+      <title>Skin Cancer Probability!</title>  
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="apple-mobile-web-app-capable" content="yes">
       <link rel="stylesheet" href="w3.css">
@@ -86,7 +86,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 <body>
 <div id="header" class="w3-container w3-flat-amethyst">
-	<h1>Cold or Allergies?</h1>
+	<h1>How likely are you to have skin cancer?</h1>
 </div>
 	
 <div id="content" class="w3-container">
@@ -119,7 +119,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>	
 
 <footer class="w3-bottom w3-container w3-flat-amethyst">
-	<p>DIY!</p>
+	<p>DIY Work Block1  4-7 Skin Cancer Diagnostic Test!</p>
 </footer>
 
 </body>
