--- a/index.html
+++ b/index.html
@@ -114,15 +114,31 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     	</div><!--content --> 
 </div>
 
-<div class="page" id="two">
-	<div class="w3-container w3-flat-amethyst">
-		<h1>Question 2</h1>
-	</div>
+<div class="page" id="two"> <!--creates new page for Question 2-->
+	<div class="w3-container w3-flat-amethyst"> <!--creates orange header box-->
+		<h1>Question 2</h1> <!--displays "Question 2" as the header"-->
+	</div> <!--ends header box-->
 	
-	<div id="content" class="w3-container">
-		<p>Content of page 2 goes here.</p>
-	</div>
-</div>	
+	<div id="content" class="w3-container"> <!--creates white page background-->
+	<p>Does the skin spot have a poorly defined border?</p> <!--Displays Question 2 on page 2-->
+		<a href="#three"  onclick="cancerAdd();" class="w3-btn w3-black"> Yes</a> <!--creates a button that runs cancerAdd() function and adds 1 to cancer count when clicked which leads to page 3-->
+	<a href="#three"  onclick="spotAdd();" class="w3-btn w3-black">No</a> <!--creates a button that runs spotAdd() function and adds 1 to spot count when clicked which leads to page 3-->
+	</div> <!--divides page-->
+</div> <!--divides page-->
+	
+<div class="page" id="three"> <!--creates new page for Question 3-->
+	<div class="w3-container w3-flat-amethyst"> <!--creates orange header box-->
+		<h1>Question 3</h1> <!--displays "Question 3" as the header-->
+	</div> <!--ends header box-->
+	
+	<div id="content" class="w3-container"> <!--creates white page background-->
+	<p>Is your skin spot multicolored? </p> <!--displays Question 3 on page 3-->
+         	<a href="#four"  onclick="cancerAdd();" class="w3-btn w3-black">Yes</a> <!--creates a button that runs cancerAdd() function and adds 1 to cancer count when clicked which leads to page 4-->
+		<a href="#four"  onclick="spotAdd();" class="w3-btn w3-black"> No</a> <!--creates a button that runs spotAdd() function and adds 1 to spot count when clicked which leads to page 4-->
+	</div> <!--divides page-->
+</div> <!--divides page-->
+	
+</div>
 
 <footer class="w3-bottom w3-container w3-flat-amethyst">
 	<p>DIY Work Block1  4-7 Skin Cancer Diagnostic Test!</p>
