added dividers between question pages

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
          	<a href="#four"  onclick="cancerAdd();" class="w3-btn w3-black">Yes</a> <!--creates a button that runs cancerAdd() function and adds 1 to cancer count when clicked which leads to page 4-->
 		<a href="#four"  onclick="spotAdd();" class="w3-btn w3-black"> No</a> <!--creates a button that runs spotAdd() function and adds 1 to spot count when clicked which leads to page 4-->
 	</div> <!--divides page-->
+</div> <!--divides page-->
 	
 <div class="page" id="four">
 
@@ -146,6 +147,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<a href="#five" onclick="cancerAdd();" class="w3-btn w3-black"> Yes</a> <!--The buttons that will calculate the probability of whether the person has skin cancer or if it is just a skin spot--> 
          	<a href="#five" onclick="spotAdd();" class="w3-btn w3-black">No</a>
     	</div><!--page content --> 
+</div> <!--divides page-->
 
 <div class="page" id="five">
 
@@ -157,6 +159,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<a href="#six" onclick="cancerAdd();" class="w3-btn w3-black"> Yes</a> <!--The buttons that will calculate the probability of whether the person has skin cancer or if it is just a skin spot--> 
          	<a href="#six" onclick="spotAdd();" class="w3-btn w3-black">No</a>
     	</div><!-- page content --> 
+</div> <!--divides page-->
 	
 <div class="page" id="six"> <!-- contains page content-->
 	<div class="w3-container w3-flat-amethyst"> <!-- contains header content -->
