editing javascript function for results

--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
   alert("This file last modified " + docMod); // generates alert box with time stamp.
   console.log("This file last modified  " + docMod); // displays last modified date and time in the javascipt browser console 
 
-        var cancer_count = 0;
-        var spot_count = 0;
+        var cancer_count = 0; //identifying and establishing variable for cancer
+        var spot_count = 0; //identifiying and establishing variable for skin spot
 
 
         function cancerAdd(){
-            cancer_count = cancer_count + 1;
+            cancer_count = cancer_count + 1; //function to keep track of amount of times a symptom for cancer is recorded 
 
         }
 
         function spotAdd(){
-            spot_count = cold_count + 1;
+            spot_count = spot_count + 1; //function to keep track of amount of times a symptom for just a skin spot is recorded 
 
 	}
 
-        }
+
 
   </script>
 
