edited questions, edited footer

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<h1>Question 4</h1>
 	</div>
     	<div id="content" class="w3-container"> 
-        <p>Is it greater than 6mm (about the size of a pencil eraser)? </p> <!--Question that is printed-->
+        <p>Is the skin spot greater than 6mm (about the size of a pencil eraser)? </p> <!--Question that is printed-->
 		<a href="#five" onclick="cancerAdd();" class="w3-btn w3-black"> Yes</a> <!--The buttons that will calculate the probability of whether the person has skin cancer or if it is just a skin spot--> 
          	<a href="#five" onclick="spotAdd();" class="w3-btn w3-black">No</a> <!--The buttons that will calculate the probability of whether the person has skin cancer or if it is just a skin spot--> 
 		
@@ -178,7 +178,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<h1>Question 5</h1>
 	</div>
     	<div id="content" class="w3-container"> 
-        <p>Is it changing in shape, size, or color?</p> <!--Question that is printed-->
+        <p>Is the skin spot changing in shape, size, or color?</p> <!--Question that is printed-->
 		<a href="#six" onclick="cancerAdd();" class="w3-btn w3-black"> Yes</a> <!--The buttons that will calculate the probability of whether the person has skin cancer or if it is just a skin spot--> 
          	<a href="#six" onclick="spotAdd();" class="w3-btn w3-black">No</a> <!--The buttons that will calculate the probability of whether the person has skin cancer or if it is just a skin spot-->
 	
@@ -212,7 +212,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>
 
 <footer class="w3-bottom w3-container w3-flat-amethyst">
-	<p>DIY Work Block1  4-7 Skin Cancer Diagnostic Test!</p>
+	<p>DIY Work Block 1  4-7 Skin Cancer Diagnostic Test!</p>
 </footer>
 
 </body>
