--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 <div id="content" class="w3-container"> <!-- intro question -->
 	<p>Do you have a mysterious spot on your skin and wonder if it is cancerous? Answer a few short questions to find out.</p>
-	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a> <!-- get started button launches question page-->	
+	<a href="#zero" class="w3-btn w3-grey w3-round"> Get Started </a> <!-- get started button launches question page-->	
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
