--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
           data[i + 2] = 0; // sets blue parameter to 0 so blue intensity doesn't show
           }
 
-        context2.putImageData(imageData, 0, 0); // puts transformed (blue) image data back onto second canvas
+        context2.putImageData(imageData, 0, 0); // puts transformed (red) image data back onto second canvas
           
           
         } // end of img.onload
