--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 <script>
   var docMod = document.lastModified; // gets last modified date and time of the index.html file
-  alert("This file last modified " + docMod); // generates alert box with time stamp.
+  /* alert("This file last modified " + docMod); // generates alert box with time stamp. */
   console.log("This file last modified  " + docMod); // displays last modified date and time in the javascipt browser console 
 
         var cancer_count = 0; //identifying and establishing variable for cancer
